# src/Models/CartModel.js
@@ -4,17 +4,25 @@ import mongoose from 'mongoose';
 const { Schema } = mongoose;
 
 const CartItemSchema = new Schema({
-  productId: {
-    type: Schema.Types.ObjectId,
-    ref: 'Product',
-    required: true,
-  },
-  quantity: {
-    type: Number,
-    required: true,
-    default: 1,
-  },
-});
+  userId: { type: String },
+  sessionId: { type: String },
+  products: [
+      {
+          productId: { type: mongoose.Schema.Types.ObjectId, ref: 'Product', required: true },
+          productName: { type: String, required: true },
+          price: { type: Number, required: true },
+          description: { type: String },
+          category: { type: String, required: true },
+          image: {
+              public_id: { type: String },
+              asset_id: { type: String },
+              url: { type: String }
+          },
+          quantity: { type: Number, default: 1 }
+      }
+  ]
+}, { timestamps: true });
+
 
 const CartSchema = new Schema({
   userId: {
